--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "firebase": "^10.7.2",
+    "html2canvas": "^1.4.1",
+    "html2canvas-proxy": "^1.0.1",
     "vue": "^3.3.11",
     "vue-next-select": "^2.10.5",
     "vue-router": "^4.2.5",
